@@ -1,0 +1,11 @@
+@PART[*]:HAS[@MODULE[ModuleEngines],@MODULE[ModuleAlternator]]:FOR[DangIt]
+{
+    MODULE
+    {
+        name = ModuleAlternatorReliability
+        MTBF = 8000
+        LifeTime = 500
+        RepairCost = 1
+		Silent = false
+    }
+}
