@@ -1,0 +1,11 @@
+@PART[*]:HAS[!MODULE[ModuleEngines],@RESOURCE[ElectricCharge]]:FOR[DangIt]
+{
+    MODULE
+    {
+        name = ModuleBatteryReliability
+        MTBF = 16000
+        LifeTime = 100000
+        RepairCost = 1
+		Silent = false
+    }
+}
