@@ -1,0 +1,11 @@
+@PART[*]:HAS[@MODULE[ModuleControlSurface]]:FOR[DangIt]
+{
+    MODULE
+    {
+        name = ModuleControlSurfaceReliability
+        MTBF = 4000
+        LifeTime = 8000
+        RepairCost = 1
+		Silent = false
+    }
+}
