@@ -1,0 +1,11 @@
+@PART[*]:HAS[@MODULE[ModuleEngines]:HAS[!PROPELLANT[SolidFuel]]]:FOR[DangIt]
+{
+    MODULE
+    {
+        name = ModuleEngineReliability
+        MTBF = 16000
+        LifeTime = 10
+        RepairCost = 10
+		Silent = false
+    }
+}
