@@ -1,0 +1,11 @@
+@PART[*]:HAS[@MODULE[ModuleEngines],@MODULE[ModuleGimbal]]:FOR[DangIt]
+{
+    MODULE
+    {
+        name = ModuleGimbalReliability
+        MTBF = 8000
+        LifeTime = 50
+        RepairCost = 5
+		Silent = false
+    }
+}
