@@ -1,0 +1,7 @@
+@PART[*]:FOR[DangIt]
+{
+    MODULE
+    {
+        name = InspectionModule
+    }
+}
