@@ -1,0 +1,11 @@
+@PART[*]:HAS[@MODULE[ModuleLight]]:FOR[DangIt]
+{
+    MODULE
+    {
+        name = ModuleLightsReliability
+        MTBF = 8000
+        LifeTime = 100000
+        RepairCost = 1
+		Silent = false
+    }
+}
