@@ -1,0 +1,11 @@
+@PART[*]:HAS[@MODULE[ModuleRCS]]:FOR[DangIt]
+{
+    MODULE
+    {
+        name = ModuleRCSReliability
+        MTBF = 16000
+        LifeTime = 100
+        RepairCost = 3
+		Silent = false
+    }
+}
