@@ -1,0 +1,11 @@
+@PART[*]:HAS[@MODULE[ModuleReactionWheel]]:FOR[DangIt]
+{
+    MODULE
+    {
+        name = ModuleReactionWheelReliability
+        MTBF = 32000
+        LifeTime = 100000
+        RepairCost = 2
+		Silent = false
+    }
+}
