@@ -1,0 +1,22 @@
+RESOURCE_DEFINITION
+{
+   name = SpareParts
+   density = 0.001
+   flowMode = NO_FLOW
+   transfer = NONE
+   isTweakable = true
+}
+
+@PART:HAS[@MODULE[ModuleCommand]]:FOR[DangIt]
+{
+    RESOURCE
+	{
+		name = SpareParts
+		amount = 25
+		maxAmount = 250
+	}
+    MODULE
+    {
+        name = ModuleSparesContainer
+    }
+}
