@@ -1,0 +1,13 @@
+@PART[*]:HAS[@RESOURCE[*]]:FOR[DangIt]
+{
+    MODULE
+    {
+        name = ModuleTankReliability
+        MTBF = 48000
+        LifeTime = 100000
+        RepairCost = 1
+        MinTC = 60
+        MaxTC = 240
+		Silent = false
+    }
+}
